// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RacingTaskSolver with task "2017-07-17-lev.tsk" can handle outlandings 1`] = `
Object {
  "completed": false,
  "distance": 94373.825,
  "path": Array [
    StartEvent {
      "point": lon 6.9179704 lat 51.1276447,
      "time": 2017-07-17T14:06:54.931Z,
      "type": "start",
    },
    TurnEvent {
      "num": 1,
      "point": lon 6.2812555 lat 50.9890756,
      "time": 2017-07-17T15:42:59.779Z,
      "type": "turn",
    },
    TurnEvent {
      "num": 2,
      "point": lon 6.1937554 lat 51.1722784,
      "time": 2017-07-17T16:21:04.919Z,
      "type": "turn",
    },
  ],
  "speed": undefined,
  "time": undefined,
}
`;

exports[`RacingTaskSolver with task "2017-07-17-lev.tsk" returns a result 1`] = `
Object {
  "completed": true,
  "distance": 136420.85,
  "path": Array [
    StartEvent {
      "point": lon 6.9313498 lat 51.0847306,
      "time": 2017-07-17T14:50:56.825Z,
      "type": "start",
    },
    TurnEvent {
      "num": 1,
      "point": lon 6.2829181 lat 50.9964654,
      "time": 2017-07-17T15:24:26.380Z,
      "type": "turn",
    },
    TurnEvent {
      "num": 2,
      "point": lon 6.1941852 lat 51.1723459,
      "time": 2017-07-17T15:51:51.555Z,
      "type": "turn",
    },
    TurnEvent {
      "num": 3,
      "point": lon 6.6075025 lat 50.9694879,
      "time": 2017-07-17T16:20:04.143Z,
      "type": "turn",
    },
    FinishEvent {
      "point": lon 7.0084235 lat 51.0985126,
      "time": 2017-07-17T16:39:10.837Z,
      "type": "finish",
    },
  ],
  "speed": 75.625831,
  "time": 6494.0122,
}
`;

exports[`RacingTaskSolver with task "2017-07-17-lev.tsk" returns an intermediate result 1`] = `
Object {
  "completed": false,
  "distance": 52735.160,
  "path": Array [
    StartEvent {
      "point": lon 6.9147855 lat 51.1378604,
      "time": 2017-07-17T14:17:08.833Z,
      "type": "start",
    },
    TurnEvent {
      "num": 1,
      "point": lon 6.2829181 lat 50.9964654,
      "time": 2017-07-17T15:24:26.380Z,
      "type": "turn",
    },
  ],
  "speed": undefined,
  "time": undefined,
}
`;

exports[`RacingTaskSolver with task "2017-07-17-lev.tsk" returns an intermediate result 2`] = `
Object {
  "completed": true,
  "distance": 136420.85,
  "path": Array [
    StartEvent {
      "point": lon 6.9313498 lat 51.0847306,
      "time": 2017-07-17T14:50:56.825Z,
      "type": "start",
    },
    TurnEvent {
      "num": 1,
      "point": lon 6.2829181 lat 50.9964654,
      "time": 2017-07-17T15:24:26.380Z,
      "type": "turn",
    },
    TurnEvent {
      "num": 2,
      "point": lon 6.1941852 lat 51.1723459,
      "time": 2017-07-17T15:51:51.555Z,
      "type": "turn",
    },
    TurnEvent {
      "num": 3,
      "point": lon 6.6075025 lat 50.9694879,
      "time": 2017-07-17T16:20:04.143Z,
      "type": "turn",
    },
    FinishEvent {
      "point": lon 7.0084235 lat 51.0985126,
      "time": 2017-07-17T16:39:10.837Z,
      "type": "finish",
    },
  ],
  "speed": 75.625831,
  "time": 6494.0122,
}
`;
